# ai1220-collab-editor

./: .gitignore  DEVIATIONS.md  README.md  level2.mmd  level3.mmd  pytest.ini  run.sh
ai-service/: .env.example  main.py  requirements.txt
backend/: .env.example  .gitignore  package-lock.json  package.json  pyproject.toml  requirements.txt
backend/app/: __init__.py  ai_prompts.py  ai_provider.py  ai_service.py  config.py  content.py  database.py  db.py  deps.py  main.py  realtime.py  repository.py  schema.sql  schemas.py  security.py
backend/app/routers/: __init__.py  access.py  ai.py  auth.py  documents.py  sessions.py  share_links.py
backend/src/: app.js  server.js
backend/src/db/: index.js  schema.sql
backend/src/lib/: cache.js  llm.js
backend/src/middleware/: auth.js
backend/src/repositories/: documents.js  users.js
backend/src/routes/: access.js  ai.js  auth.js  documents.js  sessions.js
backend/src/services/: ai.js  auth.js  documents.js
backend/test/: integration.test.js
backend/tests/: .test-editor.db  test_ai_prompts.py  test_api.py  test_permissions.py  test_realtime_foundation.py  test_security.py
docs/: REPORT-LUKA-SECTIONS.md  ai-integration-design.md  api-reference.md  architectural-drivers.md  auth-design.md  c4-diagrams.md  communication-model.md  erd.mmd  error-contract.md  feature-decomposition.md  nfr.md  project-management.md  realtime-contract.md  repo-structure.md  traceability.md
frontend/: .env.example  AGENTS.harman.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
(+43 files in other folders)
